# dusk-deploy-cli

./: CHANGELOG.md  Cargo.toml  README.md  config.toml
dusk-deploy-cli/: Cargo.toml  config.toml
dusk-deploy-cli/src/: args.rs  config.rs  contract_caller.rs  dcli_prover_client.rs  dcli_state_client.rs  dcli_store.rs  deployer.rs  error.rs  executor.rs  gen_id.rs  main.rs  rusk_http_client.rs  tx_builder.rs  utils.rs  wallet_builder.rs
rusk-http-client/: Cargo.toml
rusk-http-client/src/: bc_types.rs  block.rs  blockchain_inquirer.rs  client.rs  contract_inquirer.rs  error.rs  lib.rs  stream_aux.rs  tx_inquirer.rs
test/: alice.wasm  bob.wasm
wallet/: Cargo.toml
wallet-accessor/: Cargo.toml
wallet-accessor/src/: accessor.rs  lib.rs
wallet/src/: imp.rs  lib.rs
