[package]
name = "dusk-deploy-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
wallet = { path = "../wallet" }
#dusk-wallet = "0.22.1"
rkyv = { version = "0.7", default-features = false, features = ["size_32"] }
bytecheck = { version = "0.6", default-features = false }
#dusk-pki = "0.13"
dusk-bls12_381 = "0.12"
toml-base-config = "0.1"
#phoenix-core = { version = "0.21", features = ["alloc"] }
execution-core = { path = "../../rusk/execution-core" }
rusk-prover = { path = "../../rusk/rusk-prover" }
poseidon-merkle = { version = "0.6", features = ["rkyv-impl"] }

clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.21", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
#futures = { version = "0.3", optional = true }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
#requestty = "0.4.1"
hex = "0.4"
dusk-bytes = "0.1"
#group = "0.13"
#bytes = "1.4"
#futures-core = "0.3"
reqwest = "0.11"
#bytecheck = "0.6"
#sha3 = "0.10"
blake3 = "1.3"
#bs58 = "0.4"
thiserror = "1.0"
parking_lot = "0.12"

