[package]
name = "dusk-deploy-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
wallet = { path = "../wallet" }
rusk-http-client = { path = "../rusk-http-client" }
rkyv = { version = "0.7", default-features = false, features = ["size_32"] }
bytecheck = { version = "0.6", default-features = false }
dusk-bls12_381 = "0.12"
toml-base-config = "0.1"
execution-core = { path = "../../rusk/execution-core" }
rusk-prover = { path = "../../rusk/rusk-prover" }
dusk-plonk = "0.19"
poseidon-merkle = { version = "0.6", features = ["rkyv-impl"] }
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.21", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
hex = "0.4"
dusk-bytes = "0.1"
reqwest = "0.11"
blake3 = "1.3"
thiserror = "1.0"
parking_lot = "0.12"

