[package]
name = "rusk-http-client"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
reqwest = { version = "0.11", features = ["stream"] }
rkyv = { version = "=0.7.39", default-features = false }
bytecheck = { version = "0.6", default-features = false }
bytes = "1.4"
futures = "0.3"
futures-core = "0.3"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
execution-core = { path = "../../rusk/execution-core" }
tokio = { version = "1.21", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
hex = "0.4"