[package]
name = "wallet-accessor"
description = "SDK for Citadel, a ZK-based SSI system integrated in Dusk Network."
version = "0.1.1"
edition = "2021"
license = "MPL-2.0"

[dependencies]
tokio = { version = "1.15", features = ["rt-multi-thread", "time", "fs", "macros"] }
tokio-tungstenite = { version = "0.19", default-features = false, features = ["connect"] }
futures = "0.3"
futures-core = "0.3"
dusk-wallet-core = "0.24.0-plonk.0.16-rc.2"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
dusk-wallet = "0.22.1"
#dusk-plonk = { version = "0.16", default-features = false, features = ["rkyv-impl", "alloc"] }
phoenix-core = { version = "0.21", features = ["alloc"] }
#dusk-poseidon = { version = "0.31", default-features = false, features = ["rkyv-impl", "alloc"] }
#poseidon-merkle = { version = "0.3", features = ["rkyv-impl"] }
#dusk-jubjub = { version = "0.13", default-features = false }
dusk-bls12_381 = "0.12"
#dusk-pki = { version = "0.13", default-features = false, features = ["rkyv-impl"] }
rusk-abi = { version = "0.12.0-rc", default-features = false }
rkyv = { version = "=0.7.39" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3", features = ["hex"] }
thiserror = "1.0"
toml-base-config = "0.1"
bytecheck = "0.6"
gql_client = "1"
base64 = "0.21"
hex = "0.4"
rand = "0.8"
dusk-bytes = "0.1"
blake3 = "1.4"
tracing = "0.1"
bytes = "1.4"
reqwest = "0.11"
sha2 = "0.10"
sha3 = "0.10"
bs58 = "0.4"

[dev-dependencies]
tokio = { version = "1.15", features = ["rt-multi-thread", "time", "fs", "macros"] }
